# GINFINITY

./: .gitignore  Dockerfile  MANIFEST.in  METHODS.MD  README.md  alignment_training_formulas.md  commit_changes.diff  compute_distances.py  environment.yml  generate_premirnas_emb.sh  gin_app.py  predict_embedding.py  predict_embedding_README.md  pyproject.toml  requirements.txt  run_all_pairwise_alignments.py  run_msa.sh  run_optimization.sh  run_training.sh  run_training_alignment_mode.sh.back  run_training_alignment_mode.sh.gin  train_model.py  train_model_README.md  train_model_optuna.py  train_model_optuna_README.md  train_model_v2.py
data/benchmark_datasets/: benchmark_datasets.json
dev/benchmark/: README.md  benchmark.py
dev/embedding_evaluation/: generate_histograms.py  project_embeddings.py
dev/hyperparameter_tuning/: README.md  run_tunning.sh  tune.py
dev/hyperparameter_tuning/db/: optuna_studies.db
docs/: embed_msa.md  message_passing.md
nextflow/: main.nf  nextflow.config  run_trasncript_pipeline.sh
nextflow/docker/gninfinity-dist/: Dockerfile
nextflow/docker/gninfinity-draw-pairs/: Dockerfile
nextflow/docker/gninfinity-embed/: Dockerfile
nextflow/docs/: metric_calculation.md
nextflow/modules/: aggregated_metric.py  build_faiss_index.py  compute_distances.py  draw_pairs.py  faiss_prototype.py  generate_embeddings.py  generate_report.py  generate_windows.py  optimize_metric.py  predict_embedding.py  query_faiss_index.py
scripts/: compute_distances.py  generate_embeddings.py  generate_windows.py  predict_embedding.py  predict_embedding_README.md  scripts_README.md  train_model.py
src/: early_stopping.py  gin_rna_dataset.py  sample_and_pair.py  utils.py
src/benchmark/: README.md  benchmark.py  prepare-benchmark-data.ipynb
src/data_generation/: README.md  data_generation_utils.py  generate_data.py  run_generate_data.sh
src/embedding_evaluation/: generate_histograms.py  project_embeddings.py
src/ginfinity/: py.typed  utils.py
src/ginfinity/model/: gin_model.py
src/ginfinity/scripts/: align_node_embeddings.py  align_node_embeddings_batch.py  embed_msa.py  generate_base_embeddings.py  generate_embeddings.py  generate_node_embeddings.py  (+4 more)
src/hp/: generate_grid.py  hyperparameter_search.py  plot_hyperparameter_heatmaps.py  train_combination.py
src/hyperparameter_tuning/: run_tunning.sh  tune.py
src/model/: gin_model.py
src/tests/: test_utils.py
src/training/: gin_rna_dataset.py
tests/: test_model.py
(+18 files in other folders)
